--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   },
   "homepage": "https://github.com/LambdaSchool/Sprint-Challenge-Node-Express#readme",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "helmet": "^3.18.0",
     "knex": "^0.17.1",
     "nodemon": "^1.19.1",
+    "only": "0.0.2",
     "sqlite3": "^4.0.8"
   },
   "devDependencies": {
